# test-task-google-translate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  dev-docker-compose.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker-image.yml
gtservice/: app.py  schemas.py  settings.py
gtservice/api/: translations.py  words.py
gtservice/db/: __init__.py  common.py  models.py
gtservice/logic/: translation.py
gtservice/translation_loader/: gt_loader.py  loader.py  schemas.py
migrations/: env.py  script.py.mako
migrations/versions/: 20230710_0010_07ac19cd9877_initial.py
pytest/: conftest.py  test_gt_api.py
pytest/api/: conftest.py  test_word_api.py
pytest/files/: testing_data_gt.json  testing_data_gt_2.json
