[tool.poetry]
name = "testtaskgoogletranslate"
version = "0.1.0"
description = "Test Task: Google Translate service"
authors = ["Stanislav Gonorovsky <drmozg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.100.0b3"
uvicorn = "0.22.0"
aiohttp = "3.8.4"
fastapi-cache2 = { version = "0.2.1", extras = ["redis"] }
asyncpg = "0.27.0"
sqlalchemy = { version = "2.0.18", extras = ["asyncio"] }
alembic = "1.11.1"
aioredis = "2.0.1"


[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
