[tool.poetry]
name = "testtaskgoogletranslate"
version = "0.1.0"
description = "Test Task: Google Translate service"
authors = ["Stanislav Gonorovsky <drmozg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { version = "0.100.0", extras = ["all"] }
uvicorn = "0.22.0"
aiohttp = "3.8.4"
fastapi-cache2 = { version = "0.2.1", extras = ["redis"] }
asyncpg = "0.28.0"
sqlalchemy = { version = "2.0.18", extras = ["asyncio"] }
sqlalchemy-utils = "0.41.1"
alembic = "1.11.1"
aioredis = "2.0.1"


[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.0"
pytest-mock = "3.11.1"
pytest-cov = "4.1.0"
pytest-env = "0.8.2"
pre-commit = "3.3.3"

[tool.pytest.ini_options]
asyncio_mode = "strict"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(filename)s:%(lineno)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
env = [
    'DB_CONNECTION_STRING=postgresql+asyncpg://postgres:postgres@127.0.0.1:15432/postgres'
]
testpaths = [
    "pytests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
